// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._12m2ukr11,html._12m2ukr11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_1eb6ewa0 hhqjun10 hhqjun13">
+        <div class="ul8h3p0 _12m2ukr8s _12m2ukr7o _12m2ukrb0 _12m2ukr9w _12m2ukr5g _12m2ukr6c _12m2ukric _12m2ukr4k _12m2ukr4d hhqjun10 hhqjun13 _12m2ukr34 _12m2ukr37">
+          <span class="ul8h3p0 _12m2ukr50 hhqjun0 hhqjun1 hhqjun1t hhqjuna e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .ul8h3p0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
.ul8h3p1 {
  display: block;
}
.ul8h3p2 {
  line-height: 1;
}
.ul8h3p3 {
  list-style: none;
}
.ul8h3p4 {
  quotes: none;
}
.ul8h3p4:after,
.ul8h3p4:before {
  content: "";
}
.ul8h3p5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.ul8h3p6 {
  -webkit-appearance: none;
  appearance: none;
}
.ul8h3p7 {
  background-color: transparent;
}
.ul8h3p8 {
  outline: var(--_11mgx3j10) solid transparent;
  transition: outline-color 0.125s ease;
}
.ul8h3p8:focus-visible {
  outline-color: var(--_11mgx3jm);
}
.ul8h3pa {
  color: inherit;
}
.ul8h3pb:disabled {
  opacity: 1;
}
.ul8h3pb::-ms-expand {
  display: none;
}
.ul8h3pd[type="number"] {
  -moz-appearance: textfield;
}
.ul8h3pd[type="number"]::-webkit-inner-spin-button,
.ul8h3pd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.ul8h3pd::-ms-clear {
  display: none;
}
.ul8h3pd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.ul8h3pg {
  color: inherit;
  text-decoration: none;
}
._12m2ukr0 {
  overflow: hidden;
}
._12m2ukr1 {
  overflow: scroll;
}
._12m2ukr2 {
  overflow: visible;
}
._12m2ukr3 {
  overflow: auto;
}
._12m2ukr4 {
  -webkit-user-select: none;
  user-select: none;
}
._12m2ukr5 {
  outline: none;
}
._12m2ukr6 {
  outline: var(--_11mgx3j10) solid transparent;
  transition: outline-color 0.125s ease;
}
._12m2ukr6:focus-visible {
  outline-color: var(--_11mgx3jm);
}
._12m2ukr7 {
  opacity: 0;
}
._12m2ukr8 {
  z-index: 0;
}
._12m2ukr9 {
  z-index: 1;
}
._12m2ukra {
  z-index: 2;
}
._12m2ukrb {
  z-index: 90;
}
._12m2ukrc {
  z-index: 100;
}
._12m2ukrd {
  z-index: 200;
}
._12m2ukre {
  z-index: 290;
}
._12m2ukrf {
  z-index: 300;
}
._12m2ukrg {
  z-index: 400;
}
._12m2ukrh {
  cursor: default;
}
._12m2ukri {
  cursor: pointer;
}
._12m2ukrj {
  pointer-events: none;
}
._12m2ukrk {
  top: 0;
}
._12m2ukrl {
  bottom: 0;
}
._12m2ukrm {
  left: 0;
}
._12m2ukrn {
  right: 0;
}
._12m2ukro {
  height: 100%;
}
._12m2ukrp {
  height: var(--_11mgx3j9);
}
._12m2ukrq {
  width: 100%;
}
._12m2ukrr {
  width: var(--_11mgx3j9);
}
._12m2ukrs {
  min-width: 0;
}
._12m2ukrt {
  max-width: var(--_11mgx3j11);
}
._12m2ukru {
  max-width: var(--_11mgx3j12);
}
._12m2ukrv {
  max-width: var(--_11mgx3j13);
}
._12m2ukrw {
  max-width: var(--_11mgx3j14);
}
._12m2ukrx {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._12m2ukry {
  transition: var(--_11mgx3j5i);
}
._12m2ukrz {
  transition: var(--_11mgx3j5j);
}
._12m2ukr10:active {
  transform: var(--_11mgx3j5k);
}
html._12m2ukr11 ._12m2ukr13,
html:not(._12m2ukr11) ._12m2ukr12 {
  background: var(--_11mgx3j1t);
}
html._12m2ukr11 ._12m2ukr15,
html:not(._12m2ukr11) ._12m2ukr14 {
  background: var(--_11mgx3j1u);
}
html._12m2ukr11 ._12m2ukr17,
html:not(._12m2ukr11) ._12m2ukr16 {
  background: var(--_11mgx3j1v);
}
html._12m2ukr11 ._12m2ukr19,
html:not(._12m2ukr11) ._12m2ukr18 {
  background: var(--_11mgx3j1w);
}
html._12m2ukr11 ._12m2ukr1b,
html:not(._12m2ukr11) ._12m2ukr1a {
  background: var(--_11mgx3j1x);
}
html._12m2ukr11 ._12m2ukr1d,
html:not(._12m2ukr11) ._12m2ukr1c {
  background: var(--_11mgx3j1y);
}
html._12m2ukr11 ._12m2ukr1f,
html:not(._12m2ukr11) ._12m2ukr1e {
  background: var(--_11mgx3j1z);
}
html._12m2ukr11 ._12m2ukr1h,
html:not(._12m2ukr11) ._12m2ukr1g {
  background: var(--_11mgx3j20);
}
html._12m2ukr11 ._12m2ukr1j,
html:not(._12m2ukr11) ._12m2ukr1i {
  background: var(--_11mgx3j21);
}
html._12m2ukr11 ._12m2ukr1l,
html:not(._12m2ukr11) ._12m2ukr1k {
  background: var(--_11mgx3j22);
}
html._12m2ukr11 ._12m2ukr1n,
html:not(._12m2ukr11) ._12m2ukr1m {
  background: var(--_11mgx3j23);
}
html._12m2ukr11 ._12m2ukr1p,
html:not(._12m2ukr11) ._12m2ukr1o {
  background: var(--_11mgx3j24);
}
html._12m2ukr11 ._12m2ukr1r,
html:not(._12m2ukr11) ._12m2ukr1q {
  background: var(--_11mgx3j25);
}
html._12m2ukr11 ._12m2ukr1t,
html:not(._12m2ukr11) ._12m2ukr1s {
  background: var(--_11mgx3j26);
}
html._12m2ukr11 ._12m2ukr1v,
html:not(._12m2ukr11) ._12m2ukr1u {
  background: var(--_11mgx3j27);
}
html._12m2ukr11 ._12m2ukr1x,
html:not(._12m2ukr11) ._12m2ukr1w {
  background: var(--_11mgx3j28);
}
html._12m2ukr11 ._12m2ukr1z,
html:not(._12m2ukr11) ._12m2ukr1y {
  background: var(--_11mgx3j29);
}
html._12m2ukr11 ._12m2ukr21,
html:not(._12m2ukr11) ._12m2ukr20 {
  background: var(--_11mgx3j2a);
}
html._12m2ukr11 ._12m2ukr23,
html:not(._12m2ukr11) ._12m2ukr22 {
  background: var(--_11mgx3j2b);
}
html._12m2ukr11 ._12m2ukr25,
html:not(._12m2ukr11) ._12m2ukr24 {
  background: var(--_11mgx3j2c);
}
html._12m2ukr11 ._12m2ukr27,
html:not(._12m2ukr11) ._12m2ukr26 {
  background: var(--_11mgx3j2d);
}
html._12m2ukr11 ._12m2ukr29,
html:not(._12m2ukr11) ._12m2ukr28 {
  background: var(--_11mgx3j2e);
}
html._12m2ukr11 ._12m2ukr2b,
html:not(._12m2ukr11) ._12m2ukr2a {
  background: var(--_11mgx3j2f);
}
html._12m2ukr11 ._12m2ukr2d,
html:not(._12m2ukr11) ._12m2ukr2c {
  background: var(--_11mgx3j2g);
}
html._12m2ukr11 ._12m2ukr2f,
html:not(._12m2ukr11) ._12m2ukr2e {
  background: var(--_11mgx3j2h);
}
html._12m2ukr11 ._12m2ukr2h,
html:not(._12m2ukr11) ._12m2ukr2g {
  background: var(--_11mgx3j2i);
}
html._12m2ukr11 ._12m2ukr2j,
html:not(._12m2ukr11) ._12m2ukr2i {
  background: var(--_11mgx3j2j);
}
html._12m2ukr11 ._12m2ukr2l,
html:not(._12m2ukr11) ._12m2ukr2k {
  background: var(--_11mgx3j2k);
}
html._12m2ukr11 ._12m2ukr2n,
html:not(._12m2ukr11) ._12m2ukr2m {
  background: var(--_11mgx3j2l);
}
html._12m2ukr11 ._12m2ukr2p,
html:not(._12m2ukr11) ._12m2ukr2o {
  background: var(--_11mgx3j2m);
}
html._12m2ukr11 ._12m2ukr2r,
html:not(._12m2ukr11) ._12m2ukr2q {
  background: var(--_11mgx3j2n);
}
html._12m2ukr11 ._12m2ukr2t,
html:not(._12m2ukr11) ._12m2ukr2s {
  background: var(--_11mgx3j2o);
}
html._12m2ukr11 ._12m2ukr2v,
html:not(._12m2ukr11) ._12m2ukr2u {
  background: var(--_11mgx3j2p);
}
html._12m2ukr11 ._12m2ukr2x,
html:not(._12m2ukr11) ._12m2ukr2w {
  background: var(--_11mgx3j2q);
}
html._12m2ukr11 ._12m2ukr2z,
html:not(._12m2ukr11) ._12m2ukr2y {
  background: var(--_11mgx3j2r);
}
html._12m2ukr11 ._12m2ukr31,
html:not(._12m2ukr11) ._12m2ukr30 {
  background: var(--_11mgx3j2s);
}
html._12m2ukr11 ._12m2ukr33,
html:not(._12m2ukr11) ._12m2ukr32 {
  background: var(--_11mgx3j2t);
}
html._12m2ukr11 ._12m2ukr35,
html:not(._12m2ukr11) ._12m2ukr34 {
  background: var(--_11mgx3j2u);
}
html._12m2ukr11 ._12m2ukr37,
html:not(._12m2ukr11) ._12m2ukr36 {
  background: var(--_11mgx3j2v);
}
html._12m2ukr11 ._12m2ukr39,
html:not(._12m2ukr11) ._12m2ukr38 {
  box-shadow: var(--_11mgx3j5l);
}
html._12m2ukr11 ._12m2ukr3b,
html:not(._12m2ukr11) ._12m2ukr3a {
  box-shadow: var(--_11mgx3j5m);
}
html._12m2ukr11 ._12m2ukr3d,
html:not(._12m2ukr11) ._12m2ukr3c {
  box-shadow: var(--_11mgx3j5n);
}
html._12m2ukr11 ._12m2ukr3f,
html:not(._12m2ukr11) ._12m2ukr3e {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jf);
}
html._12m2ukr11 ._12m2ukr3h,
html:not(._12m2ukr11) ._12m2ukr3g {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jg);
}
html._12m2ukr11 ._12m2ukr3j,
html:not(._12m2ukr11) ._12m2ukr3i {
  box-shadow: inset 0 0 0 var(--_11mgx3jz) var(--_11mgx3jf);
}
html._12m2ukr11 ._12m2ukr3l,
html:not(._12m2ukr11) ._12m2ukr3k {
  box-shadow: inset 0 0 0 var(--_11mgx3jz) var(--_11mgx3jg);
}
html._12m2ukr11 ._12m2ukr3n,
html:not(._12m2ukr11) ._12m2ukr3m {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jh);
}
html._12m2ukr11 ._12m2ukr3p,
html:not(._12m2ukr11) ._12m2ukr3o {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3ji);
}
html._12m2ukr11 ._12m2ukr3r,
html:not(._12m2ukr11) ._12m2ukr3q {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jj);
}
html._12m2ukr11 ._12m2ukr3t,
html:not(._12m2ukr11) ._12m2ukr3s {
  box-shadow: inset 0 0 0 var(--_11mgx3jz) var(--_11mgx3jj);
}
html._12m2ukr11 ._12m2ukr3v,
html:not(._12m2ukr11) ._12m2ukr3u {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jk);
}
html._12m2ukr11 ._12m2ukr3x,
html:not(._12m2ukr11) ._12m2ukr3w {
  box-shadow: inset 0 0 0 var(--_11mgx3jz) var(--_11mgx3jk);
}
html._12m2ukr11 ._12m2ukr3z,
html:not(._12m2ukr11) ._12m2ukr3y {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jl);
}
html._12m2ukr11 ._12m2ukr41,
html:not(._12m2ukr11) ._12m2ukr40 {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jn);
}
html._12m2ukr11 ._12m2ukr43,
html:not(._12m2ukr11) ._12m2ukr42 {
  box-shadow: inset 0 0 0 var(--_11mgx3jz) var(--_11mgx3jn);
}
html._12m2ukr11 ._12m2ukr45,
html:not(._12m2ukr11) ._12m2ukr44 {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jo);
}
html._12m2ukr11 ._12m2ukr47,
html:not(._12m2ukr11) ._12m2ukr46 {
  box-shadow: inset 0 0 0 var(--_11mgx3jz) var(--_11mgx3jo);
}
html._12m2ukr11 ._12m2ukr49,
html:not(._12m2ukr11) ._12m2ukr48 {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jp);
}
html._12m2ukr11 ._12m2ukr4b,
html:not(._12m2ukr11) ._12m2ukr4a {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jq);
}
html._12m2ukr11 ._12m2ukr4d,
html:not(._12m2ukr11) ._12m2ukr4c {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jr);
}
html._12m2ukr11 ._12m2ukr4f,
html:not(._12m2ukr11) ._12m2ukr4e {
  box-shadow: inset 0 0 0 var(--_11mgx3jz) var(--_11mgx3jr);
}
html._12m2ukr11 ._12m2ukr4h,
html:not(._12m2ukr11) ._12m2ukr4g {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3js);
}
html._12m2ukr11 ._12m2ukr4j,
html:not(._12m2ukr11) ._12m2ukr4i {
  box-shadow: inset 0 0 0 var(--_11mgx3jz) var(--_11mgx3js);
}
html._12m2ukr11 ._12m2ukr4l,
html:not(._12m2ukr11) ._12m2ukr4k {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jt);
}
html._12m2ukr11 ._12m2ukr4n,
html:not(._12m2ukr11) ._12m2ukr4m {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3ju);
}
html._12m2ukr11 ._12m2ukr4p,
html:not(._12m2ukr11) ._12m2ukr4o {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jv);
}
html._12m2ukr11 ._12m2ukr4r,
html:not(._12m2ukr11) ._12m2ukr4q {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jw);
}
html._12m2ukr11 ._12m2ukr4t,
html:not(._12m2ukr11) ._12m2ukr4s {
  box-shadow: inset 0 0 0 var(--_11mgx3jy) var(--_11mgx3jx);
}
html._12m2ukr11 ._12m2ukr4v,
html:not(._12m2ukr11) ._12m2ukr4u {
  box-shadow: 0 0 0 var(--_11mgx3j10) var(--_11mgx3jm);
}
._12m2ukr4w {
  display: none;
}
._12m2ukr50 {
  display: block;
}
._12m2ukr54 {
  display: inline;
}
._12m2ukr58 {
  display: inline-block;
}
._12m2ukr5c {
  display: flex;
}
._12m2ukr5g {
  position: relative;
}
._12m2ukr5k {
  position: absolute;
}
._12m2ukr5o {
  position: fixed;
}
._12m2ukr5s {
  position: sticky;
}
._12m2ukr5w {
  border-radius: 0;
}
._12m2ukr60 {
  border-radius: 9999px;
}
._12m2ukr64 {
  border-radius: var(--_11mgx3jb);
}
._12m2ukr68 {
  border-radius: var(--_11mgx3jc);
}
._12m2ukr6c {
  border-radius: var(--_11mgx3jd);
}
._12m2ukr6g {
  border-radius: var(--_11mgx3je);
}
._12m2ukr6k {
  gap: var(--_11mgx3j0);
}
._12m2ukr6o {
  gap: var(--_11mgx3j1);
}
._12m2ukr6s {
  gap: var(--_11mgx3j2);
}
._12m2ukr6w {
  gap: var(--_11mgx3j3);
}
._12m2ukr70 {
  gap: var(--_11mgx3j4);
}
._12m2ukr74 {
  gap: var(--_11mgx3j5);
}
._12m2ukr78 {
  gap: var(--_11mgx3j6);
}
._12m2ukr7c {
  gap: var(--_11mgx3j7);
}
._12m2ukr7g {
  gap: var(--_11mgx3j8);
}
._12m2ukr7k {
  gap: 0;
}
._12m2ukr7o {
  padding-top: var(--_11mgx3j0);
}
._12m2ukr7s {
  padding-top: var(--_11mgx3j1);
}
._12m2ukr7w {
  padding-top: var(--_11mgx3j2);
}
._12m2ukr80 {
  padding-top: var(--_11mgx3j3);
}
._12m2ukr84 {
  padding-top: var(--_11mgx3j4);
}
._12m2ukr88 {
  padding-top: var(--_11mgx3j5);
}
._12m2ukr8c {
  padding-top: var(--_11mgx3j6);
}
._12m2ukr8g {
  padding-top: var(--_11mgx3j7);
}
._12m2ukr8k {
  padding-top: var(--_11mgx3j8);
}
._12m2ukr8o {
  padding-top: 0;
}
._12m2ukr8s {
  padding-bottom: var(--_11mgx3j0);
}
._12m2ukr8w {
  padding-bottom: var(--_11mgx3j1);
}
._12m2ukr90 {
  padding-bottom: var(--_11mgx3j2);
}
._12m2ukr94 {
  padding-bottom: var(--_11mgx3j3);
}
._12m2ukr98 {
  padding-bottom: var(--_11mgx3j4);
}
._12m2ukr9c {
  padding-bottom: var(--_11mgx3j5);
}
._12m2ukr9g {
  padding-bottom: var(--_11mgx3j6);
}
._12m2ukr9k {
  padding-bottom: var(--_11mgx3j7);
}
._12m2ukr9o {
  padding-bottom: var(--_11mgx3j8);
}
._12m2ukr9s {
  padding-bottom: 0;
}
._12m2ukr9w {
  padding-right: var(--_11mgx3j0);
}
._12m2ukra0 {
  padding-right: var(--_11mgx3j1);
}
._12m2ukra4 {
  padding-right: var(--_11mgx3j2);
}
._12m2ukra8 {
  padding-right: var(--_11mgx3j3);
}
._12m2ukrac {
  padding-right: var(--_11mgx3j4);
}
._12m2ukrag {
  padding-right: var(--_11mgx3j5);
}
._12m2ukrak {
  padding-right: var(--_11mgx3j6);
}
._12m2ukrao {
  padding-right: var(--_11mgx3j7);
}
._12m2ukras {
  padding-right: var(--_11mgx3j8);
}
._12m2ukraw {
  padding-right: 0;
}
._12m2ukrb0 {
  padding-left: var(--_11mgx3j0);
}
._12m2ukrb4 {
  padding-left: var(--_11mgx3j1);
}
._12m2ukrb8 {
  padding-left: var(--_11mgx3j2);
}
._12m2ukrbc {
  padding-left: var(--_11mgx3j3);
}
._12m2ukrbg {
  padding-left: var(--_11mgx3j4);
}
._12m2ukrbk {
  padding-left: var(--_11mgx3j5);
}
._12m2ukrbo {
  padding-left: var(--_11mgx3j6);
}
._12m2ukrbs {
  padding-left: var(--_11mgx3j7);
}
._12m2ukrbw {
  padding-left: var(--_11mgx3j8);
}
._12m2ukrc0 {
  padding-left: 0;
}
._12m2ukrc4 {
  margin-top: var(--_11mgx3j0);
}
._12m2ukrc8 {
  margin-top: var(--_11mgx3j1);
}
._12m2ukrcc {
  margin-top: var(--_11mgx3j2);
}
._12m2ukrcg {
  margin-top: var(--_11mgx3j3);
}
._12m2ukrck {
  margin-top: var(--_11mgx3j4);
}
._12m2ukrco {
  margin-top: var(--_11mgx3j5);
}
._12m2ukrcs {
  margin-top: var(--_11mgx3j6);
}
._12m2ukrcw {
  margin-top: var(--_11mgx3j7);
}
._12m2ukrd0 {
  margin-top: var(--_11mgx3j8);
}
._12m2ukrd4 {
  margin-top: 0;
}
._12m2ukrd8 {
  margin-bottom: var(--_11mgx3j0);
}
._12m2ukrdc {
  margin-bottom: var(--_11mgx3j1);
}
._12m2ukrdg {
  margin-bottom: var(--_11mgx3j2);
}
._12m2ukrdk {
  margin-bottom: var(--_11mgx3j3);
}
._12m2ukrdo {
  margin-bottom: var(--_11mgx3j4);
}
._12m2ukrds {
  margin-bottom: var(--_11mgx3j5);
}
._12m2ukrdw {
  margin-bottom: var(--_11mgx3j6);
}
._12m2ukre0 {
  margin-bottom: var(--_11mgx3j7);
}
._12m2ukre4 {
  margin-bottom: var(--_11mgx3j8);
}
._12m2ukre8 {
  margin-bottom: 0;
}
._12m2ukrec {
  margin-right: var(--_11mgx3j0);
}
._12m2ukreg {
  margin-right: var(--_11mgx3j1);
}
._12m2ukrek {
  margin-right: var(--_11mgx3j2);
}
._12m2ukreo {
  margin-right: var(--_11mgx3j3);
}
._12m2ukres {
  margin-right: var(--_11mgx3j4);
}
._12m2ukrew {
  margin-right: var(--_11mgx3j5);
}
._12m2ukrf0 {
  margin-right: var(--_11mgx3j6);
}
._12m2ukrf4 {
  margin-right: var(--_11mgx3j7);
}
._12m2ukrf8 {
  margin-right: var(--_11mgx3j8);
}
._12m2ukrfc {
  margin-right: 0;
}
._12m2ukrfg {
  margin-left: var(--_11mgx3j0);
}
._12m2ukrfk {
  margin-left: var(--_11mgx3j1);
}
._12m2ukrfo {
  margin-left: var(--_11mgx3j2);
}
._12m2ukrfs {
  margin-left: var(--_11mgx3j3);
}
._12m2ukrfw {
  margin-left: var(--_11mgx3j4);
}
._12m2ukrg0 {
  margin-left: var(--_11mgx3j5);
}
._12m2ukrg4 {
  margin-left: var(--_11mgx3j6);
}
._12m2ukrg8 {
  margin-left: var(--_11mgx3j7);
}
._12m2ukrgc {
  margin-left: var(--_11mgx3j8);
}
._12m2ukrgg {
  margin-left: 0;
}
._12m2ukrgk {
  align-items: flex-start;
}
._12m2ukrgo {
  align-items: center;
}
._12m2ukrgs {
  align-items: flex-end;
}
._12m2ukrgw {
  justify-content: flex-start;
}
._12m2ukrh0 {
  justify-content: center;
}
._12m2ukrh4 {
  justify-content: flex-end;
}
._12m2ukrh8 {
  justify-content: space-between;
}
._12m2ukrhc {
  flex-direction: row;
}
._12m2ukrhg {
  flex-direction: row-reverse;
}
._12m2ukrhk {
  flex-direction: column;
}
._12m2ukrho {
  flex-direction: column-reverse;
}
._12m2ukrhs {
  flex-wrap: wrap;
}
._12m2ukrhw {
  flex-wrap: nowrap;
}
._12m2ukri0 {
  flex-shrink: 0;
}
._12m2ukri4 {
  flex-grow: 0;
}
._12m2ukri8 {
  flex-grow: 1;
}
._12m2ukric {
  text-align: left;
}
._12m2ukrig {
  text-align: center;
}
._12m2ukrik {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._12m2ukr4x {
    display: none;
  }
  ._12m2ukr51 {
    display: block;
  }
  ._12m2ukr55 {
    display: inline;
  }
  ._12m2ukr59 {
    display: inline-block;
  }
  ._12m2ukr5d {
    display: flex;
  }
  ._12m2ukr5h {
    position: relative;
  }
  ._12m2ukr5l {
    position: absolute;
  }
  ._12m2ukr5p {
    position: fixed;
  }
  ._12m2ukr5t {
    position: sticky;
  }
  ._12m2ukr5x {
    border-radius: 0;
  }
  ._12m2ukr61 {
    border-radius: 9999px;
  }
  ._12m2ukr65 {
    border-radius: var(--_11mgx3jb);
  }
  ._12m2ukr69 {
    border-radius: var(--_11mgx3jc);
  }
  ._12m2ukr6d {
    border-radius: var(--_11mgx3jd);
  }
  ._12m2ukr6h {
    border-radius: var(--_11mgx3je);
  }
  ._12m2ukr6l {
    gap: var(--_11mgx3j0);
  }
  ._12m2ukr6p {
    gap: var(--_11mgx3j1);
  }
  ._12m2ukr6t {
    gap: var(--_11mgx3j2);
  }
  ._12m2ukr6x {
    gap: var(--_11mgx3j3);
  }
  ._12m2ukr71 {
    gap: var(--_11mgx3j4);
  }
  ._12m2ukr75 {
    gap: var(--_11mgx3j5);
  }
  ._12m2ukr79 {
    gap: var(--_11mgx3j6);
  }
  ._12m2ukr7d {
    gap: var(--_11mgx3j7);
  }
  ._12m2ukr7h {
    gap: var(--_11mgx3j8);
  }
  ._12m2ukr7l {
    gap: 0;
  }
  ._12m2ukr7p {
    padding-top: var(--_11mgx3j0);
  }
  ._12m2ukr7t {
    padding-top: var(--_11mgx3j1);
  }
  ._12m2ukr7x {
    padding-top: var(--_11mgx3j2);
  }
  ._12m2ukr81 {
    padding-top: var(--_11mgx3j3);
  }
  ._12m2ukr85 {
    padding-top: var(--_11mgx3j4);
  }
  ._12m2ukr89 {
    padding-top: var(--_11mgx3j5);
  }
  ._12m2ukr8d {
    padding-top: var(--_11mgx3j6);
  }
  ._12m2ukr8h {
    padding-top: var(--_11mgx3j7);
  }
  ._12m2ukr8l {
    padding-top: var(--_11mgx3j8);
  }
  ._12m2ukr8p {
    padding-top: 0;
  }
  ._12m2ukr8t {
    padding-bottom: var(--_11mgx3j0);
  }
  ._12m2ukr8x {
    padding-bottom: var(--_11mgx3j1);
  }
  ._12m2ukr91 {
    padding-bottom: var(--_11mgx3j2);
  }
  ._12m2ukr95 {
    padding-bottom: var(--_11mgx3j3);
  }
  ._12m2ukr99 {
    padding-bottom: var(--_11mgx3j4);
  }
  ._12m2ukr9d {
    padding-bottom: var(--_11mgx3j5);
  }
  ._12m2ukr9h {
    padding-bottom: var(--_11mgx3j6);
  }
  ._12m2ukr9l {
    padding-bottom: var(--_11mgx3j7);
  }
  ._12m2ukr9p {
    padding-bottom: var(--_11mgx3j8);
  }
  ._12m2ukr9t {
    padding-bottom: 0;
  }
  ._12m2ukr9x {
    padding-right: var(--_11mgx3j0);
  }
  ._12m2ukra1 {
    padding-right: var(--_11mgx3j1);
  }
  ._12m2ukra5 {
    padding-right: var(--_11mgx3j2);
  }
  ._12m2ukra9 {
    padding-right: var(--_11mgx3j3);
  }
  ._12m2ukrad {
    padding-right: var(--_11mgx3j4);
  }
  ._12m2ukrah {
    padding-right: var(--_11mgx3j5);
  }
  ._12m2ukral {
    padding-right: var(--_11mgx3j6);
  }
  ._12m2ukrap {
    padding-right: var(--_11mgx3j7);
  }
  ._12m2ukrat {
    padding-right: var(--_11mgx3j8);
  }
  ._12m2ukrax {
    padding-right: 0;
  }
  ._12m2ukrb1 {
    padding-left: var(--_11mgx3j0);
  }
  ._12m2ukrb5 {
    padding-left: var(--_11mgx3j1);
  }
  ._12m2ukrb9 {
    padding-left: var(--_11mgx3j2);
  }
  ._12m2ukrbd {
    padding-left: var(--_11mgx3j3);
  }
  ._12m2ukrbh {
    padding-left: var(--_11mgx3j4);
  }
  ._12m2ukrbl {
    padding-left: var(--_11mgx3j5);
  }
  ._12m2ukrbp {
    padding-left: var(--_11mgx3j6);
  }
  ._12m2ukrbt {
    padding-left: var(--_11mgx3j7);
  }
  ._12m2ukrbx {
    padding-left: var(--_11mgx3j8);
  }
  ._12m2ukrc1 {
    padding-left: 0;
  }
  ._12m2ukrc5 {
    margin-top: var(--_11mgx3j0);
  }
  ._12m2ukrc9 {
    margin-top: var(--_11mgx3j1);
  }
  ._12m2ukrcd {
    margin-top: var(--_11mgx3j2);
  }
  ._12m2ukrch {
    margin-top: var(--_11mgx3j3);
  }
  ._12m2ukrcl {
    margin-top: var(--_11mgx3j4);
  }
  ._12m2ukrcp {
    margin-top: var(--_11mgx3j5);
  }
  ._12m2ukrct {
    margin-top: var(--_11mgx3j6);
  }
  ._12m2ukrcx {
    margin-top: var(--_11mgx3j7);
  }
  ._12m2ukrd1 {
    margin-top: var(--_11mgx3j8);
  }
  ._12m2ukrd5 {
    margin-top: 0;
  }
  ._12m2ukrd9 {
    margin-bottom: var(--_11mgx3j0);
  }
  ._12m2ukrdd {
    margin-bottom: var(--_11mgx3j1);
  }
  ._12m2ukrdh {
    margin-bottom: var(--_11mgx3j2);
  }
  ._12m2ukrdl {
    margin-bottom: var(--_11mgx3j3);
  }
  ._12m2ukrdp {
    margin-bottom: var(--_11mgx3j4);
  }
  ._12m2ukrdt {
    margin-bottom: var(--_11mgx3j5);
  }
  ._12m2ukrdx {
    margin-bottom: var(--_11mgx3j6);
  }
  ._12m2ukre1 {
    margin-bottom: var(--_11mgx3j7);
  }
  ._12m2ukre5 {
    margin-bottom: var(--_11mgx3j8);
  }
  ._12m2ukre9 {
    margin-bottom: 0;
  }
  ._12m2ukred {
    margin-right: var(--_11mgx3j0);
  }
  ._12m2ukreh {
    margin-right: var(--_11mgx3j1);
  }
  ._12m2ukrel {
    margin-right: var(--_11mgx3j2);
  }
  ._12m2ukrep {
    margin-right: var(--_11mgx3j3);
  }
  ._12m2ukret {
    margin-right: var(--_11mgx3j4);
  }
  ._12m2ukrex {
    margin-right: var(--_11mgx3j5);
  }
  ._12m2ukrf1 {
    margin-right: var(--_11mgx3j6);
  }
  ._12m2ukrf5 {
    margin-right: var(--_11mgx3j7);
  }
  ._12m2ukrf9 {
    margin-right: var(--_11mgx3j8);
  }
  ._12m2ukrfd {
    margin-right: 0;
  }
  ._12m2ukrfh {
    margin-left: var(--_11mgx3j0);
  }
  ._12m2ukrfl {
    margin-left: var(--_11mgx3j1);
  }
  ._12m2ukrfp {
    margin-left: var(--_11mgx3j2);
  }
  ._12m2ukrft {
    margin-left: var(--_11mgx3j3);
  }
  ._12m2ukrfx {
    margin-left: var(--_11mgx3j4);
  }
  ._12m2ukrg1 {
    margin-left: var(--_11mgx3j5);
  }
  ._12m2ukrg5 {
    margin-left: var(--_11mgx3j6);
  }
  ._12m2ukrg9 {
    margin-left: var(--_11mgx3j7);
  }
  ._12m2ukrgd {
    margin-left: var(--_11mgx3j8);
  }
  ._12m2ukrgh {
    margin-left: 0;
  }
  ._12m2ukrgl {
    align-items: flex-start;
  }
  ._12m2ukrgp {
    align-items: center;
  }
  ._12m2ukrgt {
    align-items: flex-end;
  }
  ._12m2ukrgx {
    justify-content: flex-start;
  }
  ._12m2ukrh1 {
    justify-content: center;
  }
  ._12m2ukrh5 {
    justify-content: flex-end;
  }
  ._12m2ukrh9 {
    justify-content: space-between;
  }
  ._12m2ukrhd {
    flex-direction: row;
  }
  ._12m2ukrhh {
    flex-direction: row-reverse;
  }
  ._12m2ukrhl {
    flex-direction: column;
  }
  ._12m2ukrhp {
    flex-direction: column-reverse;
  }
  ._12m2ukrht {
    flex-wrap: wrap;
  }
  ._12m2ukrhx {
    flex-wrap: nowrap;
  }
  ._12m2ukri1 {
    flex-shrink: 0;
  }
  ._12m2ukri5 {
    flex-grow: 0;
  }
  ._12m2ukri9 {
    flex-grow: 1;
  }
  ._12m2ukrid {
    text-align: left;
  }
  ._12m2ukrih {
    text-align: center;
  }
  ._12m2ukril {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._12m2ukr4y {
    display: none;
  }
  ._12m2ukr52 {
    display: block;
  }
  ._12m2ukr56 {
    display: inline;
  }
  ._12m2ukr5a {
    display: inline-block;
  }
  ._12m2ukr5e {
    display: flex;
  }
  ._12m2ukr5i {
    position: relative;
  }
  ._12m2ukr5m {
    position: absolute;
  }
  ._12m2ukr5q {
    position: fixed;
  }
  ._12m2ukr5u {
    position: sticky;
  }
  ._12m2ukr5y {
    border-radius: 0;
  }
  ._12m2ukr62 {
    border-radius: 9999px;
  }
  ._12m2ukr66 {
    border-radius: var(--_11mgx3jb);
  }
  ._12m2ukr6a {
    border-radius: var(--_11mgx3jc);
  }
  ._12m2ukr6e {
    border-radius: var(--_11mgx3jd);
  }
  ._12m2ukr6i {
    border-radius: var(--_11mgx3je);
  }
  ._12m2ukr6m {
    gap: var(--_11mgx3j0);
  }
  ._12m2ukr6q {
    gap: var(--_11mgx3j1);
  }
  ._12m2ukr6u {
    gap: var(--_11mgx3j2);
  }
  ._12m2ukr6y {
    gap: var(--_11mgx3j3);
  }
  ._12m2ukr72 {
    gap: var(--_11mgx3j4);
  }
  ._12m2ukr76 {
    gap: var(--_11mgx3j5);
  }
  ._12m2ukr7a {
    gap: var(--_11mgx3j6);
  }
  ._12m2ukr7e {
    gap: var(--_11mgx3j7);
  }
  ._12m2ukr7i {
    gap: var(--_11mgx3j8);
  }
  ._12m2ukr7m {
    gap: 0;
  }
  ._12m2ukr7q {
    padding-top: var(--_11mgx3j0);
  }
  ._12m2ukr7u {
    padding-top: var(--_11mgx3j1);
  }
  ._12m2ukr7y {
    padding-top: var(--_11mgx3j2);
  }
  ._12m2ukr82 {
    padding-top: var(--_11mgx3j3);
  }
  ._12m2ukr86 {
    padding-top: var(--_11mgx3j4);
  }
  ._12m2ukr8a {
    padding-top: var(--_11mgx3j5);
  }
  ._12m2ukr8e {
    padding-top: var(--_11mgx3j6);
  }
  ._12m2ukr8i {
    padding-top: var(--_11mgx3j7);
  }
  ._12m2ukr8m {
    padding-top: var(--_11mgx3j8);
  }
  ._12m2ukr8q {
    padding-top: 0;
  }
  ._12m2ukr8u {
    padding-bottom: var(--_11mgx3j0);
  }
  ._12m2ukr8y {
    padding-bottom: var(--_11mgx3j1);
  }
  ._12m2ukr92 {
    padding-bottom: var(--_11mgx3j2);
  }
  ._12m2ukr96 {
    padding-bottom: var(--_11mgx3j3);
  }
  ._12m2ukr9a {
    padding-bottom: var(--_11mgx3j4);
  }
  ._12m2ukr9e {
    padding-bottom: var(--_11mgx3j5);
  }
  ._12m2ukr9i {
    padding-bottom: var(--_11mgx3j6);
  }
  ._12m2ukr9m {
    padding-bottom: var(--_11mgx3j7);
  }
  ._12m2ukr9q {
    padding-bottom: var(--_11mgx3j8);
  }
  ._12m2ukr9u {
    padding-bottom: 0;
  }
  ._12m2ukr9y {
    padding-right: var(--_11mgx3j0);
  }
  ._12m2ukra2 {
    padding-right: var(--_11mgx3j1);
  }
  ._12m2ukra6 {
    padding-right: var(--_11mgx3j2);
  }
  ._12m2ukraa {
    padding-right: var(--_11mgx3j3);
  }
  ._12m2ukrae {
    padding-right: var(--_11mgx3j4);
  }
  ._12m2ukrai {
    padding-right: var(--_11mgx3j5);
  }
  ._12m2ukram {
    padding-right: var(--_11mgx3j6);
  }
  ._12m2ukraq {
    padding-right: var(--_11mgx3j7);
  }
  ._12m2ukrau {
    padding-right: var(--_11mgx3j8);
  }
  ._12m2ukray {
    padding-right: 0;
  }
  ._12m2ukrb2 {
    padding-left: var(--_11mgx3j0);
  }
  ._12m2ukrb6 {
    padding-left: var(--_11mgx3j1);
  }
  ._12m2ukrba {
    padding-left: var(--_11mgx3j2);
  }
  ._12m2ukrbe {
    padding-left: var(--_11mgx3j3);
  }
  ._12m2ukrbi {
    padding-left: var(--_11mgx3j4);
  }
  ._12m2ukrbm {
    padding-left: var(--_11mgx3j5);
  }
  ._12m2ukrbq {
    padding-left: var(--_11mgx3j6);
  }
  ._12m2ukrbu {
    padding-left: var(--_11mgx3j7);
  }
  ._12m2ukrby {
    padding-left: var(--_11mgx3j8);
  }
  ._12m2ukrc2 {
    padding-left: 0;
  }
  ._12m2ukrc6 {
    margin-top: var(--_11mgx3j0);
  }
  ._12m2ukrca {
    margin-top: var(--_11mgx3j1);
  }
  ._12m2ukrce {
    margin-top: var(--_11mgx3j2);
  }
  ._12m2ukrci {
    margin-top: var(--_11mgx3j3);
  }
  ._12m2ukrcm {
    margin-top: var(--_11mgx3j4);
  }
  ._12m2ukrcq {
    margin-top: var(--_11mgx3j5);
  }
  ._12m2ukrcu {
    margin-top: var(--_11mgx3j6);
  }
  ._12m2ukrcy {
    margin-top: var(--_11mgx3j7);
  }
  ._12m2ukrd2 {
    margin-top: var(--_11mgx3j8);
  }
  ._12m2ukrd6 {
    margin-top: 0;
  }
  ._12m2ukrda {
    margin-bottom: var(--_11mgx3j0);
  }
  ._12m2ukrde {
    margin-bottom: var(--_11mgx3j1);
  }
  ._12m2ukrdi {
    margin-bottom: var(--_11mgx3j2);
  }
  ._12m2ukrdm {
    margin-bottom: var(--_11mgx3j3);
  }
  ._12m2ukrdq {
    margin-bottom: var(--_11mgx3j4);
  }
  ._12m2ukrdu {
    margin-bottom: var(--_11mgx3j5);
  }
  ._12m2ukrdy {
    margin-bottom: var(--_11mgx3j6);
  }
  ._12m2ukre2 {
    margin-bottom: var(--_11mgx3j7);
  }
  ._12m2ukre6 {
    margin-bottom: var(--_11mgx3j8);
  }
  ._12m2ukrea {
    margin-bottom: 0;
  }
  ._12m2ukree {
    margin-right: var(--_11mgx3j0);
  }
  ._12m2ukrei {
    margin-right: var(--_11mgx3j1);
  }
  ._12m2ukrem {
    margin-right: var(--_11mgx3j2);
  }
  ._12m2ukreq {
    margin-right: var(--_11mgx3j3);
  }
  ._12m2ukreu {
    margin-right: var(--_11mgx3j4);
  }
  ._12m2ukrey {
    margin-right: var(--_11mgx3j5);
  }
  ._12m2ukrf2 {
    margin-right: var(--_11mgx3j6);
  }
  ._12m2ukrf6 {
    margin-right: var(--_11mgx3j7);
  }
  ._12m2ukrfa {
    margin-right: var(--_11mgx3j8);
  }
  ._12m2ukrfe {
    margin-right: 0;
  }
  ._12m2ukrfi {
    margin-left: var(--_11mgx3j0);
  }
  ._12m2ukrfm {
    margin-left: var(--_11mgx3j1);
  }
  ._12m2ukrfq {
    margin-left: var(--_11mgx3j2);
  }
  ._12m2ukrfu {
    margin-left: var(--_11mgx3j3);
  }
  ._12m2ukrfy {
    margin-left: var(--_11mgx3j4);
  }
  ._12m2ukrg2 {
    margin-left: var(--_11mgx3j5);
  }
  ._12m2ukrg6 {
    margin-left: var(--_11mgx3j6);
  }
  ._12m2ukrga {
    margin-left: var(--_11mgx3j7);
  }
  ._12m2ukrge {
    margin-left: var(--_11mgx3j8);
  }
  ._12m2ukrgi {
    margin-left: 0;
  }
  ._12m2ukrgm {
    align-items: flex-start;
  }
  ._12m2ukrgq {
    align-items: center;
  }
  ._12m2ukrgu {
    align-items: flex-end;
  }
  ._12m2ukrgy {
    justify-content: flex-start;
  }
  ._12m2ukrh2 {
    justify-content: center;
  }
  ._12m2ukrh6 {
    justify-content: flex-end;
  }
  ._12m2ukrha {
    justify-content: space-between;
  }
  ._12m2ukrhe {
    flex-direction: row;
  }
  ._12m2ukrhi {
    flex-direction: row-reverse;
  }
  ._12m2ukrhm {
    flex-direction: column;
  }
  ._12m2ukrhq {
    flex-direction: column-reverse;
  }
  ._12m2ukrhu {
    flex-wrap: wrap;
  }
  ._12m2ukrhy {
    flex-wrap: nowrap;
  }
  ._12m2ukri2 {
    flex-shrink: 0;
  }
  ._12m2ukri6 {
    flex-grow: 0;
  }
  ._12m2ukria {
    flex-grow: 1;
  }
  ._12m2ukrie {
    text-align: left;
  }
  ._12m2ukrii {
    text-align: center;
  }
  ._12m2ukrim {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._12m2ukr4z {
    display: none;
  }
  ._12m2ukr53 {
    display: block;
  }
  ._12m2ukr57 {
    display: inline;
  }
  ._12m2ukr5b {
    display: inline-block;
  }
  ._12m2ukr5f {
    display: flex;
  }
  ._12m2ukr5j {
    position: relative;
  }
  ._12m2ukr5n {
    position: absolute;
  }
  ._12m2ukr5r {
    position: fixed;
  }
  ._12m2ukr5v {
    position: sticky;
  }
  ._12m2ukr5z {
    border-radius: 0;
  }
  ._12m2ukr63 {
    border-radius: 9999px;
  }
  ._12m2ukr67 {
    border-radius: var(--_11mgx3jb);
  }
  ._12m2ukr6b {
    border-radius: var(--_11mgx3jc);
  }
  ._12m2ukr6f {
    border-radius: var(--_11mgx3jd);
  }
  ._12m2ukr6j {
    border-radius: var(--_11mgx3je);
  }
  ._12m2ukr6n {
    gap: var(--_11mgx3j0);
  }
  ._12m2ukr6r {
    gap: var(--_11mgx3j1);
  }
  ._12m2ukr6v {
    gap: var(--_11mgx3j2);
  }
  ._12m2ukr6z {
    gap: var(--_11mgx3j3);
  }
  ._12m2ukr73 {
    gap: var(--_11mgx3j4);
  }
  ._12m2ukr77 {
    gap: var(--_11mgx3j5);
  }
  ._12m2ukr7b {
    gap: var(--_11mgx3j6);
  }
  ._12m2ukr7f {
    gap: var(--_11mgx3j7);
  }
  ._12m2ukr7j {
    gap: var(--_11mgx3j8);
  }
  ._12m2ukr7n {
    gap: 0;
  }
  ._12m2ukr7r {
    padding-top: var(--_11mgx3j0);
  }
  ._12m2ukr7v {
    padding-top: var(--_11mgx3j1);
  }
  ._12m2ukr7z {
    padding-top: var(--_11mgx3j2);
  }
  ._12m2ukr83 {
    padding-top: var(--_11mgx3j3);
  }
  ._12m2ukr87 {
    padding-top: var(--_11mgx3j4);
  }
  ._12m2ukr8b {
    padding-top: var(--_11mgx3j5);
  }
  ._12m2ukr8f {
    padding-top: var(--_11mgx3j6);
  }
  ._12m2ukr8j {
    padding-top: var(--_11mgx3j7);
  }
  ._12m2ukr8n {
    padding-top: var(--_11mgx3j8);
  }
  ._12m2ukr8r {
    padding-top: 0;
  }
  ._12m2ukr8v {
    padding-bottom: var(--_11mgx3j0);
  }
  ._12m2ukr8z {
    padding-bottom: var(--_11mgx3j1);
  }
  ._12m2ukr93 {
    padding-bottom: var(--_11mgx3j2);
  }
  ._12m2ukr97 {
    padding-bottom: var(--_11mgx3j3);
  }
  ._12m2ukr9b {
    padding-bottom: var(--_11mgx3j4);
  }
  ._12m2ukr9f {
    padding-bottom: var(--_11mgx3j5);
  }
  ._12m2ukr9j {
    padding-bottom: var(--_11mgx3j6);
  }
  ._12m2ukr9n {
    padding-bottom: var(--_11mgx3j7);
  }
  ._12m2ukr9r {
    padding-bottom: var(--_11mgx3j8);
  }
  ._12m2ukr9v {
    padding-bottom: 0;
  }
  ._12m2ukr9z {
    padding-right: var(--_11mgx3j0);
  }
  ._12m2ukra3 {
    padding-right: var(--_11mgx3j1);
  }
  ._12m2ukra7 {
    padding-right: var(--_11mgx3j2);
  }
  ._12m2ukrab {
    padding-right: var(--_11mgx3j3);
  }
  ._12m2ukraf {
    padding-right: var(--_11mgx3j4);
  }
  ._12m2ukraj {
    padding-right: var(--_11mgx3j5);
  }
  ._12m2ukran {
    padding-right: var(--_11mgx3j6);
  }
  ._12m2ukrar {
    padding-right: var(--_11mgx3j7);
  }
  ._12m2ukrav {
    padding-right: var(--_11mgx3j8);
  }
  ._12m2ukraz {
    padding-right: 0;
  }
  ._12m2ukrb3 {
    padding-left: var(--_11mgx3j0);
  }
  ._12m2ukrb7 {
    padding-left: var(--_11mgx3j1);
  }
  ._12m2ukrbb {
    padding-left: var(--_11mgx3j2);
  }
  ._12m2ukrbf {
    padding-left: var(--_11mgx3j3);
  }
  ._12m2ukrbj {
    padding-left: var(--_11mgx3j4);
  }
  ._12m2ukrbn {
    padding-left: var(--_11mgx3j5);
  }
  ._12m2ukrbr {
    padding-left: var(--_11mgx3j6);
  }
  ._12m2ukrbv {
    padding-left: var(--_11mgx3j7);
  }
  ._12m2ukrbz {
    padding-left: var(--_11mgx3j8);
  }
  ._12m2ukrc3 {
    padding-left: 0;
  }
  ._12m2ukrc7 {
    margin-top: var(--_11mgx3j0);
  }
  ._12m2ukrcb {
    margin-top: var(--_11mgx3j1);
  }
  ._12m2ukrcf {
    margin-top: var(--_11mgx3j2);
  }
  ._12m2ukrcj {
    margin-top: var(--_11mgx3j3);
  }
  ._12m2ukrcn {
    margin-top: var(--_11mgx3j4);
  }
  ._12m2ukrcr {
    margin-top: var(--_11mgx3j5);
  }
  ._12m2ukrcv {
    margin-top: var(--_11mgx3j6);
  }
  ._12m2ukrcz {
    margin-top: var(--_11mgx3j7);
  }
  ._12m2ukrd3 {
    margin-top: var(--_11mgx3j8);
  }
  ._12m2ukrd7 {
    margin-top: 0;
  }
  ._12m2ukrdb {
    margin-bottom: var(--_11mgx3j0);
  }
  ._12m2ukrdf {
    margin-bottom: var(--_11mgx3j1);
  }
  ._12m2ukrdj {
    margin-bottom: var(--_11mgx3j2);
  }
  ._12m2ukrdn {
    margin-bottom: var(--_11mgx3j3);
  }
  ._12m2ukrdr {
    margin-bottom: var(--_11mgx3j4);
  }
  ._12m2ukrdv {
    margin-bottom: var(--_11mgx3j5);
  }
  ._12m2ukrdz {
    margin-bottom: var(--_11mgx3j6);
  }
  ._12m2ukre3 {
    margin-bottom: var(--_11mgx3j7);
  }
  ._12m2ukre7 {
    margin-bottom: var(--_11mgx3j8);
  }
  ._12m2ukreb {
    margin-bottom: 0;
  }
  ._12m2ukref {
    margin-right: var(--_11mgx3j0);
  }
  ._12m2ukrej {
    margin-right: var(--_11mgx3j1);
  }
  ._12m2ukren {
    margin-right: var(--_11mgx3j2);
  }
  ._12m2ukrer {
    margin-right: var(--_11mgx3j3);
  }
  ._12m2ukrev {
    margin-right: var(--_11mgx3j4);
  }
  ._12m2ukrez {
    margin-right: var(--_11mgx3j5);
  }
  ._12m2ukrf3 {
    margin-right: var(--_11mgx3j6);
  }
  ._12m2ukrf7 {
    margin-right: var(--_11mgx3j7);
  }
  ._12m2ukrfb {
    margin-right: var(--_11mgx3j8);
  }
  ._12m2ukrff {
    margin-right: 0;
  }
  ._12m2ukrfj {
    margin-left: var(--_11mgx3j0);
  }
  ._12m2ukrfn {
    margin-left: var(--_11mgx3j1);
  }
  ._12m2ukrfr {
    margin-left: var(--_11mgx3j2);
  }
  ._12m2ukrfv {
    margin-left: var(--_11mgx3j3);
  }
  ._12m2ukrfz {
    margin-left: var(--_11mgx3j4);
  }
  ._12m2ukrg3 {
    margin-left: var(--_11mgx3j5);
  }
  ._12m2ukrg7 {
    margin-left: var(--_11mgx3j6);
  }
  ._12m2ukrgb {
    margin-left: var(--_11mgx3j7);
  }
  ._12m2ukrgf {
    margin-left: var(--_11mgx3j8);
  }
  ._12m2ukrgj {
    margin-left: 0;
  }
  ._12m2ukrgn {
    align-items: flex-start;
  }
  ._12m2ukrgr {
    align-items: center;
  }
  ._12m2ukrgv {
    align-items: flex-end;
  }
  ._12m2ukrgz {
    justify-content: flex-start;
  }
  ._12m2ukrh3 {
    justify-content: center;
  }
  ._12m2ukrh7 {
    justify-content: flex-end;
  }
  ._12m2ukrhb {
    justify-content: space-between;
  }
  ._12m2ukrhf {
    flex-direction: row;
  }
  ._12m2ukrhj {
    flex-direction: row-reverse;
  }
  ._12m2ukrhn {
    flex-direction: column;
  }
  ._12m2ukrhr {
    flex-direction: column-reverse;
  }
  ._12m2ukrhv {
    flex-wrap: wrap;
  }
  ._12m2ukrhz {
    flex-wrap: nowrap;
  }
  ._12m2ukri3 {
    flex-shrink: 0;
  }
  ._12m2ukri7 {
    flex-grow: 0;
  }
  ._12m2ukrib {
    flex-grow: 1;
  }
  ._12m2ukrif {
    text-align: left;
  }
  ._12m2ukrij {
    text-align: center;
  }
  ._12m2ukrin {
    text-align: right;
  }
}
.e739tz4 {
  font-size: var(--e739tz0);
  line-height: var(--e739tz1);
}
.e739tz4:before {
  content: "";
  display: table;
  margin-bottom: var(--e739tz2);
}
.e739tz4:after {
  content: "";
  display: table;
  margin-top: var(--e739tz3);
}
.hhqjun0 {
  font-family: var(--_11mgx3j2w);
}
.hhqjun1 {
  font-weight: var(--_11mgx3j46);
}
.hhqjun2 {
  font-weight: var(--_11mgx3j47);
}
.hhqjun3 {
  font-weight: var(--_11mgx3j48);
}
.hhqjun4 {
  --e739tz0: var(--_11mgx3j32);
  --e739tz1: var(--_11mgx3j33);
  --e739tz2: var(--_11mgx3j35);
  --e739tz3: var(--_11mgx3j36);
}
.hhqjun6 {
  --e739tz0: var(--_11mgx3j3c);
  --e739tz1: var(--_11mgx3j3d);
  --e739tz2: var(--_11mgx3j3f);
  --e739tz3: var(--_11mgx3j3g);
}
.hhqjun8 {
  --e739tz0: var(--_11mgx3j3m);
  --e739tz1: var(--_11mgx3j3n);
  --e739tz2: var(--_11mgx3j3p);
  --e739tz3: var(--_11mgx3j3q);
}
.hhqjuna {
  --e739tz0: var(--_11mgx3j3w);
  --e739tz1: var(--_11mgx3j3x);
  --e739tz2: var(--_11mgx3j3z);
  --e739tz3: var(--_11mgx3j40);
}
.hhqjunc {
  font-size: var(--_11mgx3j32);
  line-height: var(--_11mgx3j33);
}
.hhqjund {
  font-size: var(--_11mgx3j3c);
  line-height: var(--_11mgx3j3d);
}
.hhqjune {
  font-size: var(--_11mgx3j3m);
  line-height: var(--_11mgx3j3n);
}
.hhqjunf {
  font-size: var(--_11mgx3j3w);
  line-height: var(--_11mgx3j3x);
}
.hhqjung {
  font-weight: var(--_11mgx3j5d);
}
.hhqjunh {
  font-weight: var(--_11mgx3j5e);
}
.hhqjuni {
  --e739tz0: var(--_11mgx3j49);
  --e739tz1: var(--_11mgx3j4a);
  --e739tz2: var(--_11mgx3j4c);
  --e739tz3: var(--_11mgx3j4d);
}
.hhqjunk {
  --e739tz0: var(--_11mgx3j4j);
  --e739tz1: var(--_11mgx3j4k);
  --e739tz2: var(--_11mgx3j4m);
  --e739tz3: var(--_11mgx3j4n);
}
.hhqjunm {
  --e739tz0: var(--_11mgx3j4t);
  --e739tz1: var(--_11mgx3j4u);
  --e739tz2: var(--_11mgx3j4w);
  --e739tz3: var(--_11mgx3j4x);
}
.hhqjuno {
  --e739tz0: var(--_11mgx3j53);
  --e739tz1: var(--_11mgx3j54);
  --e739tz2: var(--_11mgx3j56);
  --e739tz3: var(--_11mgx3j57);
}
html:not(._12m2ukr11) .hhqjun10 {
  --hhqjunq: var(--_11mgx3j19);
  --hhqjunr: var(--_11mgx3j17);
  --hhqjuns: var(--_11mgx3j1d);
  --hhqjunt: var(--_11mgx3j1o);
  --hhqjunu: var(--_11mgx3j1m);
  --hhqjunv: var(--_11mgx3j15);
  --hhqjunw: var(--_11mgx3j1b);
  --hhqjunx: var(--_11mgx3j1k);
  --hhqjuny: var(--_11mgx3j1r);
  --hhqjunz: var(--_11mgx3j1f);
}
html:not(._12m2ukr11) .hhqjun11 {
  --hhqjunq: var(--_11mgx3j1a);
  --hhqjunr: var(--_11mgx3j18);
  --hhqjuns: var(--_11mgx3j1e);
  --hhqjunt: var(--_11mgx3j1p);
  --hhqjunu: var(--_11mgx3j1n);
  --hhqjunv: var(--_11mgx3j16);
  --hhqjunw: var(--_11mgx3j1c);
  --hhqjunx: var(--_11mgx3j1l);
  --hhqjuny: var(--_11mgx3j1s);
  --hhqjunz: var(--_11mgx3j1h);
}
html._12m2ukr11 .hhqjun12 {
  --hhqjunq: var(--_11mgx3j19);
  --hhqjunr: var(--_11mgx3j17);
  --hhqjuns: var(--_11mgx3j1d);
  --hhqjunt: var(--_11mgx3j1o);
  --hhqjunu: var(--_11mgx3j1m);
  --hhqjunv: var(--_11mgx3j15);
  --hhqjunw: var(--_11mgx3j1b);
  --hhqjunx: var(--_11mgx3j1k);
  --hhqjuny: var(--_11mgx3j1r);
  --hhqjunz: var(--_11mgx3j1f);
}
html._12m2ukr11 .hhqjun13 {
  --hhqjunq: var(--_11mgx3j1a);
  --hhqjunr: var(--_11mgx3j18);
  --hhqjuns: var(--_11mgx3j1e);
  --hhqjunt: var(--_11mgx3j1p);
  --hhqjunu: var(--_11mgx3j1n);
  --hhqjunv: var(--_11mgx3j16);
  --hhqjunw: var(--_11mgx3j1c);
  --hhqjunx: var(--_11mgx3j1l);
  --hhqjuny: var(--_11mgx3j1s);
  --hhqjunz: var(--_11mgx3j1h);
}
html:not(._12m2ukr11) .hhqjun14,
html:not(._12m2ukr11) .hhqjun15,
html:not(._12m2ukr11) .hhqjun16,
html:not(._12m2ukr11) .hhqjun17 {
  --hhqjunx: var(--hhqjunq);
}
html:not(._12m2ukr11) .hhqjun18,
html:not(._12m2ukr11) .hhqjun19 {
  --hhqjunx: var(--hhqjunr);
}
html:not(._12m2ukr11) .hhqjun1a {
  --hhqjunx: var(--hhqjunu);
}
html:not(._12m2ukr11) .hhqjun1b {
  --hhqjunx: var(--hhqjuns);
}
html:not(._12m2ukr11) .hhqjun1c {
  --hhqjunx: var(--hhqjunt);
}
html._12m2ukr11 .hhqjun1d,
html._12m2ukr11 .hhqjun1e,
html._12m2ukr11 .hhqjun1f,
html._12m2ukr11 .hhqjun1g {
  --hhqjunx: var(--hhqjunq);
}
html._12m2ukr11 .hhqjun1h,
html._12m2ukr11 .hhqjun1i {
  --hhqjunx: var(--hhqjunr);
}
html._12m2ukr11 .hhqjun1j {
  --hhqjunx: var(--hhqjunu);
}
html._12m2ukr11 .hhqjun1k {
  --hhqjunx: var(--hhqjuns);
}
html._12m2ukr11 .hhqjun1l {
  --hhqjunx: var(--hhqjunt);
}
.hhqjun1m {
  color: var(--hhqjunq);
}
.hhqjun1n {
  color: var(--hhqjunr);
}
.hhqjun1o {
  color: var(--hhqjuns);
}
.hhqjun1p {
  color: var(--hhqjunt);
}
.hhqjun1q {
  color: var(--hhqjunu);
}
.hhqjun1r {
  color: var(--hhqjunv);
}
.hhqjun1s {
  color: var(--hhqjunw);
}
.hhqjun1t {
  color: var(--hhqjunx);
}
.hhqjun1u {
  color: var(--hhqjuny);
}
.hhqjun1v {
  color: var(--hhqjunz);
}
.hhqjun1w {
  padding-bottom: calc((var(--_11mgx3j9) - var(--_11mgx3j33)) / 2);
  padding-top: calc((var(--_11mgx3j9) - var(--_11mgx3j33)) / 2);
}
.hhqjun1x {
  padding-bottom: calc((var(--_11mgx3j9) - var(--_11mgx3j3d)) / 2);
  padding-top: calc((var(--_11mgx3j9) - var(--_11mgx3j3d)) / 2);
}
.hhqjun1y {
  padding-bottom: calc((var(--_11mgx3j9) - var(--_11mgx3j3n)) / 2);
  padding-top: calc((var(--_11mgx3j9) - var(--_11mgx3j3n)) / 2);
}
.hhqjun1z {
  padding-bottom: calc((var(--_11mgx3j9) - var(--_11mgx3j3x)) / 2);
  padding-top: calc((var(--_11mgx3j9) - var(--_11mgx3j3x)) / 2);
}
@media screen and (min-width: 740px) {
  .hhqjun4 {
    --e739tz0: var(--_11mgx3j37);
    --e739tz1: var(--_11mgx3j38);
    --e739tz2: var(--_11mgx3j3a);
    --e739tz3: var(--_11mgx3j3b);
  }
  .hhqjun6 {
    --e739tz0: var(--_11mgx3j3h);
    --e739tz1: var(--_11mgx3j3i);
    --e739tz2: var(--_11mgx3j3k);
    --e739tz3: var(--_11mgx3j3l);
  }
  .hhqjun8 {
    --e739tz0: var(--_11mgx3j3r);
    --e739tz1: var(--_11mgx3j3s);
    --e739tz2: var(--_11mgx3j3u);
    --e739tz3: var(--_11mgx3j3v);
  }
  .hhqjuna {
    --e739tz0: var(--_11mgx3j41);
    --e739tz1: var(--_11mgx3j42);
    --e739tz2: var(--_11mgx3j44);
    --e739tz3: var(--_11mgx3j45);
  }
  .hhqjunc {
    font-size: var(--_11mgx3j37);
    line-height: var(--_11mgx3j38);
  }
  .hhqjund {
    font-size: var(--_11mgx3j3h);
    line-height: var(--_11mgx3j3i);
  }
  .hhqjune {
    font-size: var(--_11mgx3j3r);
    line-height: var(--_11mgx3j3s);
  }
  .hhqjunf {
    font-size: var(--_11mgx3j41);
    line-height: var(--_11mgx3j42);
  }
  .hhqjuni {
    --e739tz0: var(--_11mgx3j4e);
    --e739tz1: var(--_11mgx3j4f);
    --e739tz2: var(--_11mgx3j4h);
    --e739tz3: var(--_11mgx3j4i);
  }
  .hhqjunk {
    --e739tz0: var(--_11mgx3j4o);
    --e739tz1: var(--_11mgx3j4p);
    --e739tz2: var(--_11mgx3j4r);
    --e739tz3: var(--_11mgx3j4s);
  }
  .hhqjunm {
    --e739tz0: var(--_11mgx3j4y);
    --e739tz1: var(--_11mgx3j4z);
    --e739tz2: var(--_11mgx3j51);
    --e739tz3: var(--_11mgx3j52);
  }
  .hhqjuno {
    --e739tz0: var(--_11mgx3j58);
    --e739tz1: var(--_11mgx3j59);
    --e739tz2: var(--_11mgx3j5b);
    --e739tz3: var(--_11mgx3j5c);
  }
  .hhqjun1w {
    padding-bottom: calc((var(--_11mgx3j9) - var(--_11mgx3j38)) / 2);
    padding-top: calc((var(--_11mgx3j9) - var(--_11mgx3j38)) / 2);
  }
  .hhqjun1x {
    padding-bottom: calc((var(--_11mgx3j9) - var(--_11mgx3j3i)) / 2);
    padding-top: calc((var(--_11mgx3j9) - var(--_11mgx3j3i)) / 2);
  }
  .hhqjun1y {
    padding-bottom: calc((var(--_11mgx3j9) - var(--_11mgx3j3s)) / 2);
    padding-top: calc((var(--_11mgx3j9) - var(--_11mgx3j3s)) / 2);
  }
  .hhqjun1z {
    padding-bottom: calc((var(--_11mgx3j9) - var(--_11mgx3j42)) / 2);
    padding-top: calc((var(--_11mgx3j9) - var(--_11mgx3j42)) / 2);
  }
}
._1eb6ewa0 {
  --_11mgx3j0: 24px;
  --_11mgx3j1: 8px;
  --_11mgx3j2: 12px;
  --_11mgx3j3: 16px;
  --_11mgx3j4: 24px;
  --_11mgx3j5: 32px;
  --_11mgx3j6: 48px;
  --_11mgx3j7: 64px;
  --_11mgx3j8: 96px;
  --_11mgx3j9: 48px;
  --_11mgx3ja: 4px;
  --_11mgx3jb: 4px;
  --_11mgx3jc: 8px;
  --_11mgx3jd: 16px;
  --_11mgx3je: 24px;
  --_11mgx3jf: #e60278;
  --_11mgx3jg: #f8b1dc;
  --_11mgx3jh: #fdc221;
  --_11mgx3ji: #fee384;
  --_11mgx3jj: #b91e1e;
  --_11mgx3jk: #fb999a;
  --_11mgx3jl: #838fa5;
  --_11mgx3jm: rgba(153, 191, 247, 0.7);
  --_11mgx3jn: #1e47a9;
  --_11mgx3jo: #99bff7;
  --_11mgx3jp: #1d559d;
  --_11mgx3jq: #98c9f1;
  --_11mgx3jr: #2e3849;
  --_11mgx3jt: #eaecf1;
  --_11mgx3js: #fff;
  --_11mgx3ju: #12784f;
  --_11mgx3jv: #8bdec5;
  --_11mgx3jw: #7f35a9;
  --_11mgx3jx: #e1b2f5;
  --_11mgx3jy: 2px;
  --_11mgx3jz: 4px;
  --_11mgx3j10: 6px;
  --_11mgx3j11: 400px;
  --_11mgx3j12: 660px;
  --_11mgx3j13: 940px;
  --_11mgx3j14: 1280px;
  --_11mgx3j15: #e60278;
  --_11mgx3j16: #f8b1dc;
  --_11mgx3j17: #723d02;
  --_11mgx3j18: #fee384;
  --_11mgx3j19: #b91e1e;
  --_11mgx3j1a: #fb999a;
  --_11mgx3j1b: #1e47a9;
  --_11mgx3j1c: #99bff7;
  --_11mgx3j1d: #1d559d;
  --_11mgx3j1e: #98c9f1;
  --_11mgx3j1f: #2e3849;
  --_11mgx3j1h: #fff;
  --_11mgx3j1g: #2e3849;
  --_11mgx3j1i: #5b2084;
  --_11mgx3j1j: #f0d6fa;
  --_11mgx3j1k: #2e3849;
  --_11mgx3j1l: #fff;
  --_11mgx3j1m: #12784f;
  --_11mgx3j1n: #8bdec5;
  --_11mgx3j1o: #7f35a9;
  --_11mgx3j1p: #e1b2f5;
  --_11mgx3j1q: #e60278;
  --_11mgx3j1r: #5a6881;
  --_11mgx3j1s: hsla(0, 0%, 100%, 0.65);
  --_11mgx3j1t: #fff;
  --_11mgx3j1u: #1c2330;
  --_11mgx3j1v: #051a49;
  --_11mgx3j1w: #e60278;
  --_11mgx3j1x: #cd026b;
  --_11mgx3j1y: #fd0585;
  --_11mgx3j1z: #feeffa;
  --_11mgx3j20: #fdd7f3;
  --_11mgx3j21: #fde3f6;
  --_11mgx3j22: #fdc221;
  --_11mgx3j23: #fef8de;
  --_11mgx3j24: #b91e1e;
  --_11mgx3j25: #a31a1a;
  --_11mgx3j26: #db1616;
  --_11mgx3j27: #ffe3e2;
  --_11mgx3j28: #fef3f3;
  --_11mgx3j29: #fcdbdb;
  --_11mgx3j2a: #fde7e7;
  --_11mgx3j2b: #1e47a9;
  --_11mgx3j2c: #1a3e93;
  --_11mgx3j2d: #2455c9;
  --_11mgx3j2e: #f0f7fe;
  --_11mgx3j2f: #d8eafc;
  --_11mgx3j2g: #e4f1fd;
  --_11mgx3j2h: #1d559d;
  --_11mgx3j2i: #e3f2fb;
  --_11mgx3j2j: #2e3849;
  --_11mgx3j2k: #242c39;
  --_11mgx3j2l: #384459;
  --_11mgx3j2m: #f3f5f7;
  --_11mgx3j2n: #f3f5f7;
  --_11mgx3j2o: #e4e8ed;
  --_11mgx3j2p: #ebeff2;
  --_11mgx3j2q: #12784f;
  --_11mgx3j2r: #e2f7f1;
  --_11mgx3j2s: #7f35a9;
  --_11mgx3j2t: #f9ebfd;
  --_11mgx3j2u: #fff;
  --_11mgx3j2v: #1c2330;
  --_11mgx3j2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_11mgx3j2x: 783;
  --_11mgx3j2y: 1057;
  --_11mgx3j2z: -274;
  --_11mgx3j30: 0;
  --_11mgx3j31: 1000;
  --_11mgx3j3w: 18px;
  --_11mgx3j3x: 27.094px;
  --_11mgx3j3y: 14.094px;
  --_11mgx3j3z: -0.3611em;
  --_11mgx3j40: -0.3611em;
  --_11mgx3j41: 18px;
  --_11mgx3j42: 27.094px;
  --_11mgx3j43: 14.094px;
  --_11mgx3j44: -0.3611em;
  --_11mgx3j45: -0.3611em;
  --_11mgx3j3m: 16px;
  --_11mgx3j3n: 24.528px;
  --_11mgx3j3o: 12.528px;
  --_11mgx3j3p: -0.375em;
  --_11mgx3j3q: -0.375em;
  --_11mgx3j3r: 16px;
  --_11mgx3j3s: 24.528px;
  --_11mgx3j3t: 12.528px;
  --_11mgx3j3u: -0.375em;
  --_11mgx3j3v: -0.375em;
  --_11mgx3j3c: 14px;
  --_11mgx3j3d: 20.962px;
  --_11mgx3j3e: 10.962px;
  --_11mgx3j3f: -0.3571em;
  --_11mgx3j3g: -0.3571em;
  --_11mgx3j3h: 14px;
  --_11mgx3j3i: 20.962px;
  --_11mgx3j3j: 10.962px;
  --_11mgx3j3k: -0.3571em;
  --_11mgx3j3l: -0.3571em;
  --_11mgx3j32: 12px;
  --_11mgx3j33: 18.396px;
  --_11mgx3j34: 9.396px;
  --_11mgx3j35: -0.375em;
  --_11mgx3j36: -0.375em;
  --_11mgx3j37: 12px;
  --_11mgx3j38: 18.396px;
  --_11mgx3j39: 9.396px;
  --_11mgx3j3a: -0.375em;
  --_11mgx3j3b: -0.375em;
  --_11mgx3j46: 400;
  --_11mgx3j47: 500;
  --_11mgx3j48: 700;
  --_11mgx3j49: 28px;
  --_11mgx3j4a: 32.924px;
  --_11mgx3j4b: 21.924px;
  --_11mgx3j4c: -0.1964em;
  --_11mgx3j4d: -0.1964em;
  --_11mgx3j4e: 36px;
  --_11mgx3j4f: 42.188px;
  --_11mgx3j4g: 28.188px;
  --_11mgx3j4h: -0.1944em;
  --_11mgx3j4i: -0.1944em;
  --_11mgx3j4j: 24px;
  --_11mgx3j4k: 29.792px;
  --_11mgx3j4l: 18.792px;
  --_11mgx3j4m: -0.2292em;
  --_11mgx3j4n: -0.2292em;
  --_11mgx3j4o: 30px;
  --_11mgx3j4p: 36.49px;
  --_11mgx3j4q: 23.49px;
  --_11mgx3j4r: -0.2167em;
  --_11mgx3j4s: -0.2167em;
  --_11mgx3j4t: 22px;
  --_11mgx3j4u: 27.226px;
  --_11mgx3j4v: 17.226px;
  --_11mgx3j4w: -0.2273em;
  --_11mgx3j4x: -0.2273em;
  --_11mgx3j4y: 24px;
  --_11mgx3j4z: 29.792px;
  --_11mgx3j50: 18.792px;
  --_11mgx3j51: -0.2292em;
  --_11mgx3j52: -0.2292em;
  --_11mgx3j53: 20px;
  --_11mgx3j54: 24.66px;
  --_11mgx3j55: 15.66px;
  --_11mgx3j56: -0.225em;
  --_11mgx3j57: -0.225em;
  --_11mgx3j58: 20px;
  --_11mgx3j59: 24.66px;
  --_11mgx3j5a: 15.66px;
  --_11mgx3j5b: -0.225em;
  --_11mgx3j5c: -0.225em;
  --_11mgx3j5d: 400;
  --_11mgx3j5e: 500;
  --_11mgx3j5f: underline;
  --_11mgx3j5g: 24px;
  --_11mgx3j5h: 20px;
  --_11mgx3j5i: transform 0.125s ease, opacity 0.125s ease;
  --_11mgx3j5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_11mgx3j5k: scale(0.95);
  --_11mgx3j5l:
    0 2px 4px 0px rgba(28, 35, 48, 0.1), 0 2px 2px -2px rgba(28, 35, 48, 0.1),
    0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_11mgx3j5m:
    0 2px 4px 0px rgba(28, 35, 48, 0.1), 0 8px 8px -4px rgba(28, 35, 48, 0.1),
    0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_11mgx3j5n:
    0 2px 4px 0px rgba(28, 35, 48, 0.1), 0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._1b6rti66 {
  background: var(--_1b6rti60);
}
._1b6rti67 {
  background: var(--_1b6rti61);
}
._1b6rti68 {
  background: var(--_1b6rti62);
}
._1b6rti69 {
  background: var(--_1b6rti63);
}
._1b6rti6a {
  background: var(--_1b6rti64);
}
._1b6rti6b {
  background: var(--_1b6rti65);
}
html:not(._12m2ukr11) ._1b6rti6c {
  --_1b6rti60: var(--_11mgx3jw);
  --_1b6rti61: var(--_11mgx3jp);
  --_1b6rti62: var(--_11mgx3ju);
  --_1b6rti63: var(--_11mgx3jh);
  --_1b6rti64: var(--_11mgx3jj);
  --_1b6rti65: var(--_11mgx3jn);
}
html:not(._12m2ukr11) ._1b6rti6d {
  --_1b6rti60: var(--_11mgx3jx);
  --_1b6rti61: var(--_11mgx3jq);
  --_1b6rti62: var(--_11mgx3jv);
  --_1b6rti63: var(--_11mgx3ji);
  --_1b6rti64: var(--_11mgx3jk);
  --_1b6rti65: var(--_11mgx3jo);
}
html._12m2ukr11 ._1b6rti6e {
  --_1b6rti60: var(--_11mgx3jw);
  --_1b6rti61: var(--_11mgx3jp);
  --_1b6rti62: var(--_11mgx3ju);
  --_1b6rti63: var(--_11mgx3jh);
  --_1b6rti64: var(--_11mgx3jj);
  --_1b6rti65: var(--_11mgx3jn);
}
html._12m2ukr11 ._1b6rti6f {
  --_1b6rti60: var(--_11mgx3jx);
  --_1b6rti61: var(--_11mgx3jq);
  --_1b6rti62: var(--_11mgx3jv);
  --_1b6rti63: var(--_11mgx3ji);
  --_1b6rti64: var(--_11mgx3jk);
  --_1b6rti65: var(--_11mgx3jo);
}
._1b6rti6g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1b6rti6h {
  width: var(--_11mgx3je);
}
._1b6rti6i {
  width: var(--_11mgx3ja);
}
._1xync2u0 {
  margin-bottom: -0.1em;
}
._1xync2u2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1xync2u0 ._1xync2u2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1xync2u4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1xync2u3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__12m2ukr11,html.sprinkles_darkMode__12m2ukr11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__1eb6ewa0 typography_lightModeTone_light__hhqjun10 typography_darkModeTone_dark__hhqjun13">
+        <div class="reset_base__ul8h3p0 sprinkles_paddingBottom_gutter_mobile__12m2ukr8s sprinkles_paddingTop_gutter_mobile__12m2ukr7o sprinkles_paddingLeft_gutter_mobile__12m2ukrb0 sprinkles_paddingRight_gutter_mobile__12m2ukr9w sprinkles_position_relative_mobile__12m2ukr5g sprinkles_borderRadius_large_mobile__12m2ukr6c sprinkles_textAlign_left_mobile__12m2ukric sprinkles_boxShadow_borderNeutralLight_lightMode__12m2ukr4k sprinkles_boxShadow_borderNeutral_darkMode__12m2ukr4d typography_lightModeTone_light__hhqjun10 typography_darkModeTone_dark__hhqjun13 sprinkles_background_surface_lightMode__12m2ukr34 sprinkles_background_surfaceDark_darkMode__12m2ukr37">
+          <span class="reset_base__ul8h3p0 sprinkles_display_block_mobile__12m2ukr50 typography_fontFamily__hhqjun0 typography_fontWeight_regular__hhqjun1 typography_tone_neutral__hhqjun1t typography_textSize_large__hhqjuna capsize_capsizeStyle__e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
